[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "pccc-checker"
version = "0.1.1"
description = "관세청 API를 활용한 개인통관고유부호 유효성 검증 라이브러리"
readme = "README.md"
authors = [
  { name="SNMEDIA153", email="snmedia153@gmail.com" }
]
license = { text="MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/snmedia153-beep/pccc-checker"
"Bug Tracker" = "https://github.com/snmedia153-beep/pccc-checker/issues"